--- a/ship.ipynb
+++ b/ship.ipynb
@@ -55,6 +55,18 @@
       "metadata": {}
     },
     {
+      "source": [
+        "## Needed Packages\n",
+        "tensorflow is needed just to retreive the data. We can always downloaded from the web and read it but it is convenient to use tensorflow.\n",
+        "matplotlib is used for graphs. \n",
+        "\n",
+        "Finally, all matrix computation is done with numpy (or cupy). \n",
+        "numpy is the de facto standard of matrxi computation with python. cupy has almost the same interface but it uses NVIDIA cuda to perform the computation on the GPU. If you have access to a GPU ( like we have on Google colab) it is better to use cupy"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4Uk5mr3L3CeS",
@@ -71,6 +83,16 @@
       "outputs": []
     },
     {
+      "source": [
+        "## The data\n",
+        "\n",
+        "The CIFAR10 data set contains 50000 images for trainning and 10000 for testing. Each image has an associated label from 0 to 9 describing what type of image it is. The keras function returns tensors of type numpy.ndarray.\n",
+        "After reading the data we print some of its properties and plot the first ten images."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "tags": [],
@@ -79,10 +101,32 @@
         "colab": {}
       },
       "source": [
-        "(img_train,label_train),(img_test,label_test)=tf.keras.datasets.cifar10.load_data()\n"
+        "(img_train,label_train),(img_test,label_test)=tf.keras.datasets.cifar10.load_data()\n",
+        "print(img_train.shape)\n",
+        "print(label_train.shape)\n",
+        "print(type(img_train))\n"
       ],
       "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig=plt.figure()\n",
+        "fig.tight_layout()\n",
+        "plt.subplots_adjust( wspace=1, hspace=1)\n",
+        "\n",
+        "for i in range(10):\n",
+        "    img=img_train[i]    \n",
+        "    t=fig.add_subplot(2,5,i)\n",
+        "    t.set_title(str(label_train))\n",
+        "    t.axes.get_xaxis().set_visible(False)\n",
+        "    t.axes.get_yaxis().set_visible(False)\n",
+        "    plt.imshow(img)\n"
+      ]
     },
     {
       "cell_type": "code",
