--- a/ship.ipynb
+++ b/ship.ipynb
@@ -49,7 +49,8 @@
         "$$\n",
         "\n",
         "The input and _f_ are known whereas _W_ and _b_ are parameters to be determined. Our goal is to find the _optimal_ _W_ and _b_ such that output is as close as possible to the label associated with the input.\n",
-        "![title](figures/perceptron.png)"
+        "![title](figures/perceptron.png)\n",
+        "![title](figures/gradient-descent.png)"
       ],
       "cell_type": "markdown",
       "metadata": {}
