--- a/ship1.ipynb
+++ b/ship1.ipynb
@@ -57,8 +57,18 @@
         "$$\n",
         "\n",
         "The input and _f_ are known whereas _W_ and _b_ are parameters to be determined. Our goal is to find the _optimal_ _W_ and _b_ such that output is as close as possible to the label associated with the input.\n",
-        "![title](https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/perceptron.png?raw=1)"
+        "![title](https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/perceptron.png?raw=1)\n"
       ]
+    },
+    {
+      "source": [
+        "![Gradient Descent](https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/gradient-descent.png?raw=0)\n",
+        "\n",
+        "<div> <img src=\"attachement:https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/gradient-descent.png\" width=\"450\"/></div>\n",
+        "\n"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
