--- a/ship.ipynb
+++ b/ship.ipynb
@@ -62,9 +62,11 @@
     },
     {
       "source": [
-        "![Gradient Descent](https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/gradient-descent.png?raw=0)\n",
         "\n",
-        "<div> <img src=\"attachement:https://github.com/hikmatfarhat-ndu/CSC645/blob/master/figures/gradient-descent.png\" width=\"450\"/></div>\n",
+        "\n",
+        "<div> \n",
+        "<img src=\"attachement:figures/gradient-descent.png\" width=\"450\">\n",
+        "</div>\n",
         "\n"
       ],
       "cell_type": "markdown",
