--- a/ship.ipynb
+++ b/ship.ipynb
@@ -64,9 +64,7 @@
       "source": [
         "\n",
         "\n",
-        "<div> \n",
-        "<img src=\"attachement:figures/gradient-descent.png\" width=\"450\">\n",
-        "</div>\n",
+        "<img src=\"figures/gradient-descent.png\" width=\"250\">\n",
         "\n"
       ],
       "cell_type": "markdown",
