--- a/IMDB.ipynb
+++ b/IMDB.ipynb
@@ -5,14 +5,14 @@
     "colab": {
       "name": "IMDB.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPP0bVR8DY+mpCbevfdd0ES",
+      "authorship_tag": "ABX9TyNyisOrUDqLERRektecuEMS",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -36,9 +36,12 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "from tensorflow.keras.datasets import imdb\n",
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "#import cupy as np\n",
+        "from keras.utils import to_categorical\n",
+        "\n"
       ],
-      "execution_count": 54,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -80,10 +83,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 225
         },
-        "outputId": "ff76fd49-7f09-49c2-ecfa-b920a8f34b64"
+        "outputId": "10ab3e1d-a4bb-41f0-e9d7-4eaccca34ee8"
       },
       "source": [
         "(x_train,y_train),(x_test,y_test)=tf.keras.datasets.imdb.load_data()\n",
+        "\n",
         "print(\"The number of reviews in the x_train data set = {}\\n\".format(x_train.shape[0]))\n",
         "print(\"The average length of reviews = {}\".format(np.mean([len(x) for x in x_train])))\n",
         "print(\"With standard deviation = {}\".format(np.std([len(x) for x in x_train])))\n",
@@ -92,7 +96,7 @@
         "print(\"The number of 2's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==2])))\n",
         "print(\"The number of 3's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==3])))"
       ],
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,18 +137,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "63a8536d-71e5-472e-fb40-1179ecc27060"
+        "outputId": "2da1a654-0ec8-4947-f695-288e69655514"
       },
       "source": [
-        "(x_train,y_train),(x_test,y_test)=imdb.load_data(num_words=10000)\n",
+        "max_words=5000\n",
+        "(x_train,y_train),(x_test,y_test)=imdb.load_data(num_words=max_words)\n",
         "print(\"The number of 2's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==2])))"
       ],
-      "execution_count": 55,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The number of 2's in the x_train data set = 341611\n",
+            "The number of 2's in the x_train data set = 592372\n",
             "\n"
           ],
           "name": "stdout"
@@ -170,9 +175,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 730
+          "height": 86
         },
-        "outputId": "b6a195eb-82dc-4b0c-ae67-1c3d9bb6bffb"
+        "outputId": "263efc93-ac55-4864-dc44-34158bd3b206"
       },
       "source": [
         "\n",
@@ -181,66 +186,31 @@
         "print(word_to_index['and'])\n",
         "index_to_word=dict([(key,val) for (val,key) in word_to_index.items()])\n",
         "review = \" \".join( [index_to_word.get(i - 3, \"***\") for i in x_train[0]] )\n",
-        "print(review)\n",
-        "\n",
-        "x_train=pad_sequences(x_train,maxlen=500)\n",
-        "print(x_train[0])\n",
-        "print(len(x_train[0]))\n",
         "\n",
         "\n",
         "\n",
+        "def vectorize(sequences, dimension = max_words):\n",
+        " results = np.zeros((len(sequences), dimension))\n",
+        " for i, sequence in enumerate(sequences):\n",
+        "  results[i, sequence] = 1\n",
+        " return results\n",
         "\n",
-        "\n",
+        "x_train=vectorize(x_train)\n",
+        "x_test=vectorize(x_test)\n",
         "\n",
         "\n",
         "\n",
         "\n"
       ],
-      "execution_count": 56,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
+            "1646592/1641221 [==============================] - 0s 0us/step\n",
             "1\n",
-            "2\n",
-            "*** this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert *** is an amazing actor and now the same being director *** father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for *** and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also *** to the two little boy's that played the *** of norman and paul they were just brilliant children are often left out of the *** list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\n",
-            "[   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-            "    0    0    1   14   22   16   43  530  973 1622 1385   65  458 4468\n",
-            "   66 3941    4  173   36  256    5   25  100   43  838  112   50  670\n",
-            "    2    9   35  480  284    5  150    4  172  112  167    2  336  385\n",
-            "   39    4  172 4536 1111   17  546   38   13  447    4  192   50   16\n",
-            "    6  147 2025   19   14   22    4 1920 4613  469    4   22   71   87\n",
-            "   12   16   43  530   38   76   15   13 1247    4   22   17  515   17\n",
-            "   12   16  626   18    2    5   62  386   12    8  316    8  106    5\n",
-            "    4 2223 5244   16  480   66 3785   33    4  130   12   16   38  619\n",
-            "    5   25  124   51   36  135   48   25 1415   33    6   22   12  215\n",
-            "   28   77   52    5   14  407   16   82    2    8    4  107  117 5952\n",
-            "   15  256    4    2    7 3766    5  723   36   71   43  530  476   26\n",
-            "  400  317   46    7    4    2 1029   13  104   88    4  381   15  297\n",
-            "   98   32 2071   56   26  141    6  194 7486   18    4  226   22   21\n",
-            "  134  476   26  480    5  144   30 5535   18   51   36   28  224   92\n",
-            "   25  104    4  226   65   16   38 1334   88   12   16  283    5   16\n",
-            " 4472  113  103   32   15   16 5345   19  178   32]\n",
-            "500\n"
+            "2\n"
           ],
           "name": "stdout"
         }
@@ -249,48 +219,243 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "roJtIL5hmVC6",
+        "id": "_zIiD9oiYdLp",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 259
         },
-        "outputId": "9d84ac6b-fbdf-4514-a9a2-58579175b79b"
+        "outputId": "c671a31e-0674-4583-816d-16a4a97de43f"
       },
       "source": [
-        "a=list(x.keys())\n",
-        "b=list(x.values())\n",
-        "w=a[b.index(1408)]\n",
-        "for i in range(1,20):\n",
-        "  print(y[i])\n",
-        "str=\" \".join([y.get(i) for i in x_train[1]])\n",
-        "print(len(np.unique(np.hstack(x_train))))\n"
+        "model=tf.keras.models.Sequential()\n",
+        "model.add(tf.keras.layers.Dense(1,input_shape=(x_train.shape[1],),activation=\"sigmoid\"))\n",
+        "model.summary()\n",
+        "model.compile(optimizer=\"Adam\",loss=\"binary_crossentropy\",\n",
+        "    metrics=[\"accuracy\"])\n",
+        "history = model.fit(\n",
+        "    x_train,\n",
+        "    y_train,\n",
+        "    batch_size=500,\n",
+        "    epochs=2)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "the\n",
-            "and\n",
-            "a\n",
-            "of\n",
-            "to\n",
-            "is\n",
-            "br\n",
-            "in\n",
-            "it\n",
-            "i\n",
-            "this\n",
-            "that\n",
-            "was\n",
-            "as\n",
-            "for\n",
-            "with\n",
-            "movie\n",
-            "but\n",
-            "film\n",
-            "9998\n"
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense (Dense)                (None, 1)                 5001      \n",
+            "=================================================================\n",
+            "Total params: 5,001\n",
+            "Trainable params: 5,001\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "Epoch 1/2\n",
+            "50/50 [==============================] - 0s 5ms/step - loss: 0.6100 - accuracy: 0.7289\n",
+            "Epoch 2/2\n",
+            "50/50 [==============================] - 0s 5ms/step - loss: 0.4914 - accuracy: 0.8407\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p3npX2-Y0px1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x_train=x_train.T\n",
+        "x_test=x_test.T"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YdM2X-5HVDFZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sigmoid(z):\n",
+        "    s = 1/(1+np.exp(-z))\n",
+        "    return s"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QtO956vYVELU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def initialize_with_zeros(dim):\n",
+        "    \n",
+        "#w is a column vector. later on we take the transpose before operating on w\n",
+        "    w = np.zeros((1,dim))\n",
+        "    b = 0\n",
+        "    \n",
+        "    return w, b"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LAVCNIHzVK2O",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def propagate(w, b, X, Y):\n",
+        "# m is the number of samples which is the number of columns in X\n",
+        "    m = X.shape[1]\n",
+        "    Y_hat= sigmoid(np.dot(w,X)+b)   # compute activation\n",
+        "   \n",
+        "    cost=-np.sum(Y*np.log(Y_hat)+(1-Y)*np.log(1-Y_hat))/m\n",
+        "    # Compute Derivatives\n",
+        "\n",
+        "    dw = np.dot(X,(Y_hat-Y).T)/m\n",
+        "    db = np.sum(Y_hat-Y)/m\n",
+        "    cost = np.squeeze(cost)\n",
+        "    \n",
+        "    return dw, db, cost\n"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ZxEhbLiVPCw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def learn(w, b, X, Y, num_iterations,learning_rate, print_cost = False):\n",
+        "    \n",
+        "    for i in range(num_iterations):\n",
+        "        # Cost and gradient calculation \n",
+        "        dw,db, cost = propagate(w,b,X,Y)\n",
+        "        \n",
+        "        # update rule\n",
+        "        w = w-learning_rate*dw.T\n",
+        "        b = b-learning_rate*db\n",
+        "\n",
+        "        if print_cost and i % 500 == 0:\n",
+        "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
+        "    \n",
+        "    \n",
+        "    return w,b,dw,db"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h4WrorQ-VTUD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def predict(w, b, X):\n",
+        "    \n",
+        "    m = X.shape[1]\n",
+        "    Y_prediction = np.zeros((1,m))\n",
+        "    \n",
+        "    # Compute vector \"Y_hat\" predicting\n",
+        "    #    the probabilities of a ship being present in the picture\n",
+        "\n",
+        "    Y_hat = sigmoid(np.dot(w,X)+b)\n",
+        "\n",
+        "    for i in range(Y_hat.shape[1]):\n",
+        "        \n",
+        "        # Convert probabilities Y_hat[0,i] to actual predictions p[0,i]\n",
+        "        if Y_hat[0,i]>=0.5:\n",
+        "            Y_prediction[0,i]=1\n",
+        "        else:\n",
+        "            Y_prediction[0,i]=0\n",
+        "    \n",
+        "    assert(Y_prediction.shape == (1, m))\n",
+        "\n",
+        "    return Y_prediction"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f8RZ-AK607lV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# initialize parameters with zeros \n",
+        "w, b = initialize_with_zeros(x_train.shape[0])\n",
+        "\n"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Estuo_NVXr1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "8a4f3562-fb6c-4c74-9e91-032c5b3ab85f"
+      },
+      "source": [
+        "num_iterations = 2000\n",
+        "learning_rate = 0.2\n",
+        "print_cost = True\n",
+        "\n",
+        "\n",
+        "    \n",
+        "\n",
+        "\n",
+        "# Gradient descent \n",
+        "w,b,dw,db= learn(w, b, x_train, y_train, num_iterations, learning_rate, print_cost)\n",
+        "\n",
+        "\n",
+        "# Predict test/train set examples\n",
+        "Y_prediction_test = predict(w, b, x_test)\n",
+        "Y_prediction_train = predict(w, b, x_train)\n",
+        "\n",
+        "# Print train/test Errors\n",
+        "\n",
+        "\n",
+        "print(\"train accuracy:\"+str((100 - np.mean(np.abs(Y_prediction_train - y_train)) * 100)))\n",
+        "print(\"test accuracy:\"+str((100 - np.mean(np.abs(Y_prediction_test - y_test)) * 100)))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cost after iteration 0: 0.693147\n",
+            "Cost after iteration 500: 0.302174\n",
+            "Cost after iteration 1000: 0.266001\n",
+            "Cost after iteration 1500: 0.247101\n",
+            "train accuracy:91.428\n",
+            "test accuracy:88.3\n"
           ],
           "name": "stdout"
         }
