--- a/IMDB.ipynb
+++ b/IMDB.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "IMDB.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyisOrUDqLERRektecuEMS",
+      "authorship_tag": "ABX9TyPogPhg/WQSpoGquqUfqhGc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AxlaPRhjYIOj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AxlaPRhjYIOj"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -41,14 +39,60 @@
         "from keras.utils import to_categorical\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vKGBac0XV6uH",
+        "outputId": "5d27ea02-4bc2-4d0f-995c-0f43a798b8e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 314
+        }
+      },
+      "source": [
+        "model = tf.keras.Sequential()\n",
+        "model.add(tf.keras.layers.Embedding(6, 1, input_length=4))\n",
+        "#model.add(tf.keras.layers.Flatten())\n",
+        "#input_array = np.random.randint(10, size=(3, 4))\n",
+        "input_array=np.array([[1,2,3,4],[4,3,2,1],[3,3,4,5]])\n",
+        "model.compile('rmsprop', 'mse')\n",
+        "output_array = model.predict(input_array)\n",
+        "print(output_array.shape)\n",
+        "print(output_array)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f0be49d8bf8> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+            "(3, 4, 1)\n",
+            "[[[ 0.03702595]\n",
+            "  [-0.00937339]\n",
+            "  [ 0.02088351]\n",
+            "  [ 0.01764253]]\n",
+            "\n",
+            " [[ 0.01764253]\n",
+            "  [ 0.02088351]\n",
+            "  [-0.00937339]\n",
+            "  [ 0.03702595]]\n",
+            "\n",
+            " [[ 0.02088351]\n",
+            "  [ 0.02088351]\n",
+            "  [ 0.01764253]\n",
+            "  [ 0.0463757 ]]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dUvFJR-vkYNh",
-        "colab_type": "text"
+        "id": "dUvFJR-vkYNh"
       },
       "source": [
         "## The data\n",
@@ -65,8 +109,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XX_34kZwx7bp",
-        "colab_type": "text"
+        "id": "XX_34kZwx7bp"
       },
       "source": [
         "### Data details\n",
@@ -78,12 +121,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "l2VxN9cJyNez",
-        "colab_type": "code",
+        "outputId": "1c0868aa-c4c6-49d2-8377-791a272e8536",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "10ab3e1d-a4bb-41f0-e9d7-4eaccca34ee8"
+        }
       },
       "source": [
         "(x_train,y_train),(x_test,y_test)=tf.keras.datasets.imdb.load_data()\n",
@@ -96,7 +138,7 @@
         "print(\"The number of 2's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==2])))\n",
         "print(\"The number of 3's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==3])))"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,30 +163,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ql1rL9j80jgO",
-        "colab_type": "text"
+        "id": "ql1rL9j80jgO"
       },
       "source": [
-        "Now when we choose only the first 5000 most frequent words and compute the number of 2's in the data set. As you can see the number of 2's is now very large since all the \"ignored\" words were given the code 2."
+        "Now when we choose only the first max_words most frequent words and compute the number of 2's in the data set. As you can see the number of 2's is now very large since all the \"ignored\" words were given the code 2."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fBaHMaLXYSQT",
-        "colab_type": "code",
+        "outputId": "136a5fab-adb9-449a-ead3-752ff0f3b418",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "2da1a654-0ec8-4947-f695-288e69655514"
+        }
       },
       "source": [
         "max_words=5000\n",
         "(x_train,y_train),(x_test,y_test)=imdb.load_data(num_words=max_words)\n",
         "print(\"The number of 2's in the x_train data set = {}\\n\".format(sum([1 for x in np.hstack(x_train) if x==2])))"
       ],
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,8 +199,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n9Sm_zbolngj",
-        "colab_type": "text"
+        "id": "n9Sm_zbolngj"
       },
       "source": [
         "### Word index\n",
@@ -171,22 +210,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5sKLW9l0YoYE",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 86
-        },
-        "outputId": "263efc93-ac55-4864-dc44-34158bd3b206"
+        "id": "5sKLW9l0YoYE"
       },
       "source": [
         "\n",
         "word_to_index=imdb.get_word_index()\n",
-        "print(word_to_index['the'])\n",
-        "print(word_to_index['and'])\n",
         "index_to_word=dict([(key,val) for (val,key) in word_to_index.items()])\n",
         "review = \" \".join( [index_to_word.get(i - 3, \"***\") for i in x_train[0]] )\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kYprPNE5S-LD",
+        "outputId": "ff25f8a1-5b18-4863-e5f8-15e42451cdd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
         "\n",
         "\n",
         "def vectorize(sequences, dimension = max_words):\n",
@@ -197,20 +247,107 @@
         "\n",
         "x_train=vectorize(x_train)\n",
         "x_test=vectorize(x_test)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(x_train.shape)\n",
+        "#tmp_train=pad_sequences(x_train,maxlen=500)\n",
+        "#tmp_test=pad_sequences(x_test,maxlen=500)\n",
+        "#tmp_train=tf.keras.layers.Embedding(5000,5000,input_length=500)"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
-            "1646592/1641221 [==============================] - 0s 0us/step\n",
-            "1\n",
-            "2\n"
+            "(25000, 5000)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OYBCzczk8afa",
+        "outputId": "b072dac4-59f1-4762-ad2a-44fd7117cc4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 953
+        }
+      },
+      "source": [
+        "x_train=pad_sequences(x_train,maxlen=500)\n",
+        "x_test=pad_sequences(x_test,maxlen=500)\n",
+        "model=tf.keras.models.Sequential()\n",
+        "model.add(tf.keras.layers.Embedding(max_words,1,input_length=500))\n",
+        "model.add(tf.keras.layers.Flatten())\n",
+        "model.add(tf.keras.layers.Dense(1,activation=\"sigmoid\"))\n",
+        "model.summary()\n",
+        "model.compile(optimizer=\"Adam\",loss=\"binary_crossentropy\",\n",
+        "    metrics=[\"accuracy\"])\n",
+        "history = model.fit(\n",
+        "    x_train,\n",
+        "    y_train,\n",
+        "    batch_size=500,\n",
+        "    epochs=20)\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_9\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding_9 (Embedding)      (None, 500, 1)            5000      \n",
+            "_________________________________________________________________\n",
+            "flatten_7 (Flatten)          (None, 500)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_5 (Dense)              (None, 1)                 501       \n",
+            "=================================================================\n",
+            "Total params: 5,501\n",
+            "Trainable params: 5,501\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "Epoch 1/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.6931 - accuracy: 0.5079\n",
+            "Epoch 2/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.6887 - accuracy: 0.5791\n",
+            "Epoch 3/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.6637 - accuracy: 0.6838\n",
+            "Epoch 4/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.5978 - accuracy: 0.7560\n",
+            "Epoch 5/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.5150 - accuracy: 0.8059\n",
+            "Epoch 6/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.4450 - accuracy: 0.8393\n",
+            "Epoch 7/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.3944 - accuracy: 0.8602\n",
+            "Epoch 8/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.3585 - accuracy: 0.8707\n",
+            "Epoch 9/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.3321 - accuracy: 0.8788\n",
+            "Epoch 10/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.3114 - accuracy: 0.8872\n",
+            "Epoch 11/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2943 - accuracy: 0.8925\n",
+            "Epoch 12/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2805 - accuracy: 0.8974\n",
+            "Epoch 13/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2686 - accuracy: 0.9026\n",
+            "Epoch 14/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2589 - accuracy: 0.9058\n",
+            "Epoch 15/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2496 - accuracy: 0.9089\n",
+            "Epoch 16/20\n",
+            "50/50 [==============================] - 0s 8ms/step - loss: 0.2420 - accuracy: 0.9120\n",
+            "Epoch 17/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.2351 - accuracy: 0.9150\n",
+            "Epoch 18/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.2283 - accuracy: 0.9175\n",
+            "Epoch 19/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.2225 - accuracy: 0.9192\n",
+            "Epoch 20/20\n",
+            "50/50 [==============================] - 0s 9ms/step - loss: 0.2173 - accuracy: 0.9217\n"
           ],
           "name": "stdout"
         }
@@ -220,12 +357,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "_zIiD9oiYdLp",
-        "colab_type": "code",
+        "outputId": "b2443b0f-ba51-4ea6-bb45-1ff1f4ce03a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
-        },
-        "outputId": "c671a31e-0674-4583-816d-16a4a97de43f"
+        }
       },
       "source": [
         "model=tf.keras.models.Sequential()\n",
@@ -239,7 +375,7 @@
         "    batch_size=500,\n",
         "    epochs=2)"
       ],
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,9 +391,9 @@
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "Epoch 1/2\n",
-            "50/50 [==============================] - 0s 5ms/step - loss: 0.6100 - accuracy: 0.7289\n",
+            "50/50 [==============================] - 0s 5ms/step - loss: 0.6142 - accuracy: 0.7194\n",
             "Epoch 2/2\n",
-            "50/50 [==============================] - 0s 5ms/step - loss: 0.4914 - accuracy: 0.8407\n"
+            "50/50 [==============================] - 0s 5ms/step - loss: 0.4948 - accuracy: 0.8416\n"
           ],
           "name": "stdout"
         }
@@ -266,38 +402,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p3npX2-Y0px1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p3npX2-Y0px1"
       },
       "source": [
         "x_train=x_train.T\n",
         "x_test=x_test.T"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YdM2X-5HVDFZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YdM2X-5HVDFZ"
       },
       "source": [
         "def sigmoid(z):\n",
         "    s = 1/(1+np.exp(-z))\n",
         "    return s"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QtO956vYVELU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QtO956vYVELU"
       },
       "source": [
         "def initialize_with_zeros(dim):\n",
@@ -308,15 +438,13 @@
         "    \n",
         "    return w, b"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LAVCNIHzVK2O",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LAVCNIHzVK2O"
       },
       "source": [
         "def propagate(w, b, X, Y):\n",
@@ -333,15 +461,13 @@
         "    \n",
         "    return dw, db, cost\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ZxEhbLiVPCw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9ZxEhbLiVPCw"
       },
       "source": [
         "def learn(w, b, X, Y, num_iterations,learning_rate, print_cost = False):\n",
@@ -360,15 +486,13 @@
         "    \n",
         "    return w,b,dw,db"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h4WrorQ-VTUD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "h4WrorQ-VTUD"
       },
       "source": [
         "def predict(w, b, X):\n",
@@ -393,34 +517,31 @@
         "\n",
         "    return Y_prediction"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f8RZ-AK607lV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "f8RZ-AK607lV"
       },
       "source": [
         "# initialize parameters with zeros \n",
         "w, b = initialize_with_zeros(x_train.shape[0])\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "_Estuo_NVXr1",
-        "colab_type": "code",
+        "outputId": "8a4f3562-fb6c-4c74-9e91-032c5b3ab85f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "8a4f3562-fb6c-4c74-9e91-032c5b3ab85f"
+        }
       },
       "source": [
         "num_iterations = 2000\n",
@@ -445,7 +566,7 @@
         "print(\"train accuracy:\"+str((100 - np.mean(np.abs(Y_prediction_train - y_train)) * 100)))\n",
         "print(\"test accuracy:\"+str((100 - np.mean(np.abs(Y_prediction_test - y_test)) * 100)))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
