--- a/shallow_tensorflow_answer2.ipynb
+++ b/shallow_tensorflow_answer2.ipynb
@@ -39,7 +39,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "S7lIYasDLv5c",
-        "outputId": "46244db0-be51-4d80-995a-a1c673dd4881",
+        "outputId": "70499f57-90b0-4dc2-bb81-7c77ef5b8afa",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -65,16 +65,16 @@
         "from google.colab import files\n",
         "file=files.upload()"
       ],
-      "execution_count": 51,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3cc60b8e-a300-4a21-b921-90b75ee4d8f1\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-31331e78-6e55-4afe-89d3-3a0a067070a8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3cc60b8e-a300-4a21-b921-90b75ee4d8f1\">\n",
+              "     <output id=\"result-31331e78-6e55-4afe-89d3-3a0a067070a8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -91,7 +91,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving sonar.csv to sonar (3).csv\n"
+            "Saving sonar.csv to sonar (14).csv\n"
           ],
           "name": "stdout"
         }
@@ -106,14 +106,14 @@
         "import pandas as pd\n",
         "df=pd.read_csv(\"sonar.csv\")\n"
       ],
-      "execution_count": 52,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0aLmCxiQMfbB",
-        "outputId": "6cf5dd03-6281-4790-cf8f-e9117c944f29",
+        "outputId": "37808d74-2955-4f1c-f0e7-762ed7576a37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -127,9 +127,14 @@
         "Y=np.array([1.0 if i=='M' else 0.0 for i in Y])\n",
         "Y=Y.reshape((len(Y),1))\n",
         "Y=Y.astype(\"float32\")\n",
-        "print(type(Y[0,0]))"
+        "print(type(Y[0,0]))\n",
+        "\n",
+        "x_train=X[0:150]\n",
+        "x_test=X[150:208]\n",
+        "y_train=Y[0:150]\n",
+        "y_test=Y[150:208]"
       ],
-      "execution_count": 66,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,36 +158,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "E0ObDaVD8pb_"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "def load_dataset(n):\n",
-        "    np.random.seed(1)\n",
-        "    m = n # number of examples\n",
-        "    N = int(m/2) # number of points per class\n",
-        "    D = 2 # dimensionality\n",
-        "    X = np.zeros((m,D),dtype='float32') # data matrix where each row is a single example\n",
-        "    Y = np.zeros((m,1), dtype='float32') # labels vector (0 for red, 1 for blue)\n",
-        "    a = 4 # maximum ray of the flower\n",
-        "\n",
-        "    for j in range(2):\n",
-        "        ix = range(N*j,N*(j+1))\n",
-        "        t = np.linspace(j*3.12,(j+1)*3.12,N) + np.random.randn(N)*0.2 # theta\n",
-        "        r = a*np.sin(4*t) + np.random.randn(N)*0.2 # radius\n",
-        "        X[ix] = np.c_[r*np.sin(t), r*np.cos(t)]\n",
-        "        Y[ix] = j\n",
-        "\n",
-        "    return X, Y\n",
-        "\n"
-      ],
-      "execution_count": 54,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "5ZL7owU98pcP"
@@ -200,18 +175,17 @@
         "id": "TZl1BVG48pcR"
       },
       "source": [
-        "learning_rate = 5\n",
-        "nb_iterations = 1000\n",
-        "num_data=500 #number of data points\n",
-        "#X,Y=load_dataset(num_data)\n",
+        "learning_rate = 3\n",
+        "nb_iterations = 1500\n",
         "\n",
-        "#X_data,Y_data=load_dataset(num_data)# load data\n",
         "# Network Parameters\n",
-        "n_h = 4 # number of neurons in hidden layer\n",
+        "#n_h = 4 # number of neurons in hidden layer\n",
+        "n_h = 64 # number of neurons in hidden layer\n",
+        "\n",
         "n_x = X.shape[1] #number of neurons in input\n",
         "n_y = Y.shape[1] #number of neurons in ouput\n"
       ],
-      "execution_count": 62,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -240,7 +214,7 @@
       "metadata": {
         "id": "MY46Q5c38pch",
         "tags": [],
-        "outputId": "0f78b76d-13c6-47e7-cba8-90b2904fff99",
+        "outputId": "2755ee3d-faad-4044-900a-eb54264d2125",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -250,16 +224,14 @@
         "\n",
         "initializer = tf.initializers.RandomNormal()\n",
         "\n",
-        "#W1=tf.Variable(tf.random.normal([n_x,n_h]),dtype='float32')#Weights of the first layer\n",
         "W1=tf.Variable(initializer([n_x,n_h]),trainable=True,dtype=tf.float32)\n",
         "W2=tf.Variable(initializer([n_h,n_y]),trainable=True,dtype=tf.float32)\n",
         "\n",
-        "#W2=tf.Variable(tf.random.normal([n_h,n_y]),dtype='float32')#weights of the second layer\n",
         "b1=tf.Variable(tf.zeros([n_h]))            #biases of the first layer\n",
         "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n",
         "print(n_y)"
       ],
-      "execution_count": 67,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +266,7 @@
         "    out_layer = tf.matmul(tf.sigmoid(layer_1), W2) + b2\n",
         "    return out_layer"
       ],
-      "execution_count": 57,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -319,7 +291,7 @@
         "def loss(pred,label):\n",
         "   return tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=pred, labels=label))\n"
       ],
-      "execution_count": 58,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -336,56 +308,53 @@
       "metadata": {
         "id": "v3bNNi0M8pdS",
         "tags": [],
-        "outputId": "86a22fc8-dd6c-4c6a-87b5-737e8529bbe3",
+        "outputId": "d2f47ddf-5acc-4cb4-9d85-d6264025a6b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 259
+          "height": 121
         }
       },
       "source": [
         "# Initializing the variables\n",
         "optimizer=tf.optimizers.SGD(learning_rate)\n",
-        "def train(model,input,output):\n",
-        "  with tf.GradientTape() as tape:\n",
-        "    diff=loss(model(X),Y)\n",
-        "  grad=tape.gradient(diff,[W1,W2,b1,b2])\n",
-        "  optimizer.apply_gradients( zip( grad , [W1,W2,b1,b2] ) )\n",
-        "print(loss(model(X),Y))\n",
-        "\n",
-        "for i in range(nb_iterations):\n",
-        " if(i%100==0):\n",
-        "   print(loss(model(X),Y))\n",
-        " train(model,X,Y)\n",
-        " \n",
         "def prediction(X):\n",
         "  a=tf.math.sigmoid(model(X))\n",
         "  return tf.cast((a>0.5),tf.int32)\n",
-        "pT=tf.transpose(prediction(X))\n",
-        "print(np.dot(pT,Y))\n",
-        "print(np.dot(1-pT,1-Y))\n",
-        "correct=np.dot(pT,Y)+np.dot(1-pT,1-Y)\n",
-        "accuracy=100*float(np.squeeze(correct))/float(Y.shape[0])\n",
+        "def train(data,labels):\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    diff=loss(model(data),labels)\n",
+        "  grad=tape.gradient(diff,[W1,W2,b1,b2])\n",
+        "  optimizer.apply_gradients( zip( grad , [W1,W2,b1,b2] ) )\n",
+        "  pT=tf.transpose(prediction(data))\n",
+        "  correct=np.squeeze(np.dot(pT,labels)+np.dot(1-pT,1-labels))\n",
+        "  return diff,correct\n",
+        "\n",
+        "for i in range(nb_iterations):\n",
+        " cost,corr=train(x_train,y_train)\n",
+        " if(i%500==0):\n",
+        "  print(\"cost={},accuracy={}/{}\".format(cost,corr,x_train.shape[0]))\n",
+        "  \n",
+        " \n",
+        "\n",
+        "\n",
+        "pT=tf.transpose(prediction(x_test))\n",
+        "print(np.dot(pT,y_test))\n",
+        "print(np.dot(1-pT,1-y_test))\n",
+        "correct=np.dot(pT,y_test)+np.dot(1-pT,1-y_test)\n",
+        "accuracy=100*float(np.squeeze(correct))/float(y_test.shape[0])\n",
         "print(\"Accuracy=\"+str(accuracy))\n"
       ],
-      "execution_count": 68,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tf.Tensor(0.69336647, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.69336647, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.57573736, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.5799457, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.6050069, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.36897334, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.34877807, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.3099985, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.280853, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2586172, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.23718986, shape=(), dtype=float32)\n",
-            "[[95.]]\n",
-            "[[91.]]\n",
-            "Accuracy=89.85507246376811\n"
+            "cost=0.6937292218208313,accuracy=71.0/150\n",
+            "cost=0.31074628233909607,accuracy=133.0/150\n",
+            "cost=0.0672723799943924,accuracy=148.0/150\n",
+            "[[28.]]\n",
+            "[[18.]]\n",
+            "Accuracy=80.70175438596492\n"
           ],
           "name": "stdout"
         }
@@ -399,7 +368,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
