--- a/shallow_tensorflow_answer2.ipynb
+++ b/shallow_tensorflow_answer2.ipynb
@@ -32,14 +32,46 @@
       "source": [
         "## Using Tensorflow to model the shallow network\n",
         "In this exercise will we redo, using tensorflow the shallow network that we trained from first\n",
-        "principles before to recognize the \"flower\" shape.\n"
+        "principles before to recognize the Sonar data\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S7lIYasDLv5c",
-        "outputId": "70499f57-90b0-4dc2-bb81-7c77ef5b8afa",
+        "id": "S7lIYasDLv5c"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy as np\n"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D50ik1a98q88"
+      },
+      "source": [
+        "## The Data\n",
+        "\n",
+        "The data is from https://archive.ics.uci.edu/ml/datasets/Connectionist+Bench+(Sonar,+Mines+vs.+Rocks) the mines vs rocks sonar data. It is in csv format and very small so download it to your computer. Next we upload it to colab and read it using the pandas package.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ggc_79s_9WAf"
+      },
+      "source": [
+        "### Upload to colab\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dBPAw-TA8qiE",
+        "outputId": "4d75317e-c3e2-41bc-a625-f63049b18c08",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -60,21 +92,19 @@
         }
       },
       "source": [
-        "import tensorflow as tf\n",
-        "import numpy as np\n",
         "from google.colab import files\n",
         "file=files.upload()"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-31331e78-6e55-4afe-89d3-3a0a067070a8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-c54002b8-9dc0-4ecd-9abd-bd9c945339d5\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-31331e78-6e55-4afe-89d3-3a0a067070a8\">\n",
+              "     <output id=\"result-c54002b8-9dc0-4ecd-9abd-bd9c945339d5\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -91,10 +121,19 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving sonar.csv to sonar (14).csv\n"
+            "Saving sonar.csv to sonar (16).csv\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tY-5gNfA9jFx"
+      },
+      "source": [
+        "### Read using Pandas"
       ]
     },
     {
@@ -106,14 +145,28 @@
         "import pandas as pd\n",
         "df=pd.read_csv(\"sonar.csv\")\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X4ULSgk19oN5"
+      },
+      "source": [
+        "### Preprocessing the data\n",
+        "\n",
+        "We need to perform several operations on the data before we use it. \n",
+        "1. The data is sorted: all mines then all rocks so we shuffle it using numpy\n",
+        "2. We need to break it into train and test sets.\n",
+        "3. Make sure that the data in \"float32\" type instead of \"float\". Forsome reason  Tensorflow is sensitive about that "
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0aLmCxiQMfbB",
-        "outputId": "37808d74-2955-4f1c-f0e7-762ed7576a37",
+        "outputId": "6e0f07de-d726-42b0-cae5-2b6e0afc292b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -129,12 +182,12 @@
         "Y=Y.astype(\"float32\")\n",
         "print(type(Y[0,0]))\n",
         "\n",
-        "x_train=X[0:150]\n",
-        "x_test=X[150:208]\n",
-        "y_train=Y[0:150]\n",
-        "y_test=Y[150:208]"
+        "x_train=X[0:175]\n",
+        "x_test=X[175:208]\n",
+        "y_train=Y[0:175]\n",
+        "y_test=Y[175:208]"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,10 +204,9 @@
         "id": "Yc6230u28pb8"
       },
       "source": [
-        "### Reading the data\n",
-        "First recall that tensorflow stacks the samples row-wise instead of column-wise\n",
-        "as we have been doing when we did the gradient descent oursleves. Therefore in the last line of the\n",
-        "function load_dataset() below we don't take the transpose of X and Y as we did before."
+        "### Important Note\n",
+        "Tensorflow stacks the samples row-wise instead of column-wise\n",
+        "as we have been doing when we did the gradient descent oursleves. We need to keep that in mind."
       ]
     },
     {
@@ -163,10 +215,7 @@
         "id": "5ZL7owU98pcP"
       },
       "source": [
-        "### Defining the parameters\n",
-        "Below we define the parameters that are needed. We know that n_x=2 and n_y=1 but we extract them from the shape of\n",
-        "X_data and Y_data after we call load_dataset() . We also set the number\n",
-        "of data points to 500."
+        "### Defining the parameters\n"
       ]
     },
     {
@@ -176,7 +225,7 @@
       },
       "source": [
         "learning_rate = 3\n",
-        "nb_iterations = 1500\n",
+        "nb_iterations = 2500\n",
         "\n",
         "# Network Parameters\n",
         "#n_h = 4 # number of neurons in hidden layer\n",
@@ -185,7 +234,7 @@
         "n_x = X.shape[1] #number of neurons in input\n",
         "n_y = Y.shape[1] #number of neurons in ouput\n"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -205,20 +254,14 @@
         "A^2 &=\\sigma(Z^2)\n",
         "\\end{align*}\n",
         "Accorging to the above equations you have to define the tensorflow variables that will hold the weights and biases. \n",
-        "The biases are set to zero using the tensorflow function tf.zeros([size]) and the weights randomly using tf.random_normal([size1,size2]) using the appropriate sizes.\n",
-        "Also we have to define two placeholders for the data X and Y"
+        "The biases are set to zero  and the weights randomly."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MY46Q5c38pch",
-        "tags": [],
-        "outputId": "2755ee3d-faad-4044-900a-eb54264d2125",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "tags": []
       },
       "source": [
         "\n",
@@ -228,19 +271,10 @@
         "W2=tf.Variable(initializer([n_h,n_y]),trainable=True,dtype=tf.float32)\n",
         "\n",
         "b1=tf.Variable(tf.zeros([n_h]))            #biases of the first layer\n",
-        "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n",
-        "print(n_y)"
+        "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -249,7 +283,7 @@
       },
       "source": [
         "### Defining the model\n",
-        "Our model has two layers. The function \"model\" below should return the ouput of our model for a given input."
+        "Our model has two layers. The function \"model\" below should return the ouput of our model for a given input. Note since Tensorflow uses the first index as the sample size the dot product has a different order."
       ]
     },
     {
@@ -266,7 +300,7 @@
         "    out_layer = tf.matmul(tf.sigmoid(layer_1), W2) + b2\n",
         "    return out_layer"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -291,7 +325,7 @@
         "def loss(pred,label):\n",
         "   return tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=pred, labels=label))\n"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -300,7 +334,7 @@
         "id": "cyKqGz848pdQ"
       },
       "source": [
-        "The model is defined now we run our computation in a session."
+        "The model is defined now we run our computation."
       ]
     },
     {
@@ -308,7 +342,7 @@
       "metadata": {
         "id": "v3bNNi0M8pdS",
         "tags": [],
-        "outputId": "d2f47ddf-5acc-4cb4-9d85-d6264025a6b1",
+        "outputId": "4522f683-7e28-40b7-e860-2da2b72e3a16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -344,17 +378,17 @@
         "accuracy=100*float(np.squeeze(correct))/float(y_test.shape[0])\n",
         "print(\"Accuracy=\"+str(accuracy))\n"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "cost=0.6937292218208313,accuracy=71.0/150\n",
-            "cost=0.31074628233909607,accuracy=133.0/150\n",
-            "cost=0.0672723799943924,accuracy=148.0/150\n",
-            "[[28.]]\n",
-            "[[18.]]\n",
-            "Accuracy=80.70175438596492\n"
+            "cost=0.06292533129453659,accuracy=173.0/175\n",
+            "cost=0.0241070743650198,accuracy=175.0/175\n",
+            "cost=0.009661934338510036,accuracy=175.0/175\n",
+            "[[16.]]\n",
+            "[[11.]]\n",
+            "Accuracy=84.375\n"
           ],
           "name": "stdout"
         }
@@ -368,7 +402,7 @@
       "source": [
         ""
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     }
   ]
